2008-05-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_button),
	(clearlooks_inverted_draw_slider),
	(clearlooks_inverted_draw_scrollbar_stepper),
	(clearlooks_register_style_inverted):
	Code cleanups, and fixes (and 0.5 translation stuff)

2008-05-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_class_init):
	Fix the style initilization.

2008-05-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/*:
	Add "style_constants" in addition to the "style_functions". And
	removed the duplication of the top_left_highlight function.

2008-05-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_top_left_highlight),
	(clearlooks_gummy_draw_button), (clearlooks_gummy_draw_slider),
	(clearlooks_gummy_draw_slider_button),
	(clearlooks_gummy_draw_scrollbar_stepper):
	More 0.5 translation stuff.

2008-05-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_tab), (clearlooks_glossy_draw_slider),
	(clearlooks_glossy_draw_slider_button),
	(clearlooks_glossy_draw_scrollbar_stepper):
	Remove some 0.5 translations. The one in draw_tab is still there.

2008-05-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_shadow):
	Place the corner correctly.

2008-05-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_handle):
	Remove unused variable.

2008-05-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_gripdots):
	Fix gripdot placement.

2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_realize):